5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1875_1710.log
== SUBMITION (2019-07-02 18:06:27) 
-- CODE:
from numpy import
from numpy.linalg import *
mat = array(eval(input("digite a matriz")))
s= sum(mat)
media= s/size(mat)
print(round(media,2))
-- EXECUTION TIME:
0.795105
-- ERROR:
  File "/home/codebench/codes/1875/1710/main.py", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:06:52) 
-- CODE:
from numpy import
from numpy.linalg import *
mat = array(eval(input("digite a matriz")))
s= sum(mat)
media= s/size(mat)
print(round(media,2))
-- ERROR:
File "XXXX", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:07:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz")))
s= sum(mat)
media= s/size(mat)
print(round(media,2))
-- EXECUTION TIME:
0.794443
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]

---- correct output:
5.81
---- user output:
5.81
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]

---- correct output:
4.83
---- user output:
4.83
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]

---- correct output:
5.22
---- user output:
5.22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
